<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:minHeight="54dip"
		android:orientation="vertical">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:gravity="center_vertical" android:layout_marginTop="6dip"
			android:layout_marginBottom="9dip" android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip">
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="top"
				android:paddingTop="6dip" android:paddingRight="10dip"
				android:src="@android:drawable/ic_dialog_info" />
			<TextView android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:text="@string/menu_custom_font"
				android:textSize="25dip" android:gravity="center_vertical"
				android:textColor="@android:color/white" />
		</LinearLayout>
		<ImageView android:layout_width="fill_parent"
			android:layout_height="1dip" android:scaleType="fitXY"
			android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
			android:src="@android:drawable/divider_horizontal_dark"
			android:layout_gravity="fill_horizontal" />
		<!-- If the client uses a customTitle, it will be added here. -->
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:orientation="vertical" android:paddingLeft="10dip"
		android:paddingRight="10dip" android:layout_width="fill_parent">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/text_description_custom_font"
			android:textColor="@android:color/white"></TextView>
		<ImageView android:layout_marginBottom="5dip"
			android:layout_marginTop="5dip" android:src="@android:drawable/divider_horizontal_dark"
			android:layout_width="fill_parent" android:layout_height="1dip"
			android:scaleType="fitXY" android:layout_gravity="fill_horizontal"></ImageView>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/msg_dialog_current_font"
			android:textColor="@android:color/white"></TextView>
		<EditText android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/edittext_font_path"
			android:hint="@string/text_file_path_hint" android:inputType="textUri"></EditText>
	</LinearLayout>



	<LinearLayout android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_gravity="center"
		android:layout_width="fill_parent" android:layout_marginTop="5dip"
		android:paddingLeft="2dip" android:paddingRight="2dip"
		android:background="@android:color/darker_gray" android:paddingTop="4dip">
		<Button android:layout_height="wrap_content" android:text="@string/label_select_font"
			android:layout_weight="1" android:id="@+id/button_select"
			android:layout_width="fill_parent"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_weight="1" android:id="@+id/button_reset"
			android:text="@string/label_reset" android:layout_width="fill_parent"></Button>
	</LinearLayout>


	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:paddingLeft="2dip" android:paddingRight="2dip"
		android:background="@android:color/darker_gray">

		<Button android:layout_width="0dip" android:layout_gravity="left"
			android:layout_weight="1" android:maxLines="2" android:layout_height="wrap_content"
			android:text="@android:string/ok" android:id="@+id/button_ok" />

		<Button android:layout_width="0dip" android:layout_gravity="right"
			android:layout_weight="1" android:maxLines="2" android:layout_height="wrap_content"
			android:text="@android:string/cancel" android:id="@+id/button_cancel" />

	</LinearLayout>




</LinearLayout>
